--- a/filter_vs_forloop.ipynb
+++ b/filter_vs_forloop.ipynb
@@ -4,7 +4,18 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7713286545742124"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from time import time\n",
     "import numpy as np\n",
@@ -36,10 +47,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Elapsed time of for_loop: 0.128s\n",
-      "Elapsed time of filter(): 0.0s\n",
-      "Elapsed time of for_loop: 0.125s\n",
-      "Elapsed time of filter(): 0.0s\n"
+      "Elapsed time of for_loop: 0.126s\n",
+      "Elapsed time of filter(): 0.115s\n",
+      "Elapsed time of for_loop: 0.122s\n",
+      "Elapsed time of filter(): 0.112s\n"
      ]
     }
    ],
@@ -54,7 +65,7 @@
     "    if name == 'for_loop':\n",
     "        _ = [x for x in l if func(x)]\n",
     "    elif name == 'filter()':\n",
-    "        _ = filter(func, l)\n",
+    "        _ = list(filter(func, l))\n",
     "    else: raise NotImplementedError()\n",
     "    elapsed = round(time() - tic, 3)\n",
     "    print(f'Elapsed time of {name}: {elapsed}s')\n",
@@ -81,10 +92,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Elapsed time of for_loop: 0.128s\n",
-      "Elapsed time of map(): 0.0s\n",
-      "Elapsed time of for_loop: 0.117s\n",
-      "Elapsed time of map(): 0.0s\n"
+      "Elapsed time of for_loop: 0.126s\n",
+      "Elapsed time of map(): 0.1s\n",
+      "Elapsed time of for_loop: 0.116s\n",
+      "Elapsed time of map(): 0.102s\n"
      ]
     }
    ],
@@ -99,7 +110,7 @@
     "    if name == 'for_loop':\n",
     "        _ = [func(x) for x in l]\n",
     "    elif name == 'map()':\n",
-    "        _ = map(func, l)\n",
+    "        _ = list(map(func, l))\n",
     "    else: raise NotImplementedError()\n",
     "    elapsed = round(time() - tic, 3)\n",
     "    print(f'Elapsed time of {name}: {elapsed}s')\n",
